objects/User.object
<CustomObject>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <color>#009900</color>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3333FF</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#CC6600</color>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <color>#990000</color>
                    <label>LA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__MDM_Available_Countries_ims__c</fullName>
        <label>MDM Available Countries</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__MDM_Preferred_Country_ims__c</fullName>
        <label>MDM Preferred Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__OK_Available_Countries_ims__c</fullName>
        <label>OneKey Available Countries</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__OK_Preferred_Country_ims__c</fullName>
        <label>OneKey Preferred Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__OOC_Profile_Downloads__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OOC Profile Downloads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QIDC__OrgManagerId_IMS__c</fullName>
        <description>Org Manager Id</description>
        <externalId>true</externalId>
        <label>Org Manager Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>QIDC__MDM_Preferred_Country_Mandatory</fullName>
        <active>false</active>
        <description>MDM Preferred Country Mandatory</description>
        <errorConditionFormula>AND(
  TRIM(LOWER(CompanyName)) &lt;&gt; &apos;test&apos;
  ,  ISBLANK( TEXT(QIDC__MDM_Preferred_Country_ims__c))
  , ISPICKVAL(Profile.UserType,&apos;Standard&apos;)
)</errorConditionFormula>
        <errorDisplayField>QIDC__MDM_Preferred_Country_ims__c</errorDisplayField>
        <errorMessage>Field cannot be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QIDC__OK_MDM_Preferred_Countries_Mandatory</fullName>
        <active>false</active>
        <description>Both OneKey Preferred Country and MDM Preferred Country fields are mandatory</description>
        <errorConditionFormula>AND(
  TRIM(LOWER(CompanyName)) &lt;&gt; &apos;test&apos;
  , ISPICKVAL( Profile.UserType,&apos;Standard&apos; )
  , OR(
    ISBLANK( TEXT( QIDC__OK_Preferred_Country_ims__c ) )
    , ISBLANK( TEXT( QIDC__MDM_Preferred_Country_ims__c ) )
  ) 
)</errorConditionFormula>
        <errorMessage>Both OneKey Preferred Country and MDM Preferred Country cannot be blank.</errorMessage>
    </validationRules>
</CustomObject>